[gd_scene load_steps=6 format=3 uid="uid://bo448gij1mw6r"]

[ext_resource type="Script" uid="uid://cqq5r750k6glp" path="res://objects/scripts/cheese_gate.gd" id="1_bsbop"]
[ext_resource type="PackedScene" uid="uid://d0vxr4jg6hndo" path="res://objects/persistent_data_handler.tscn" id="2_8ljp3"]
[ext_resource type="Texture2D" uid="uid://dyk1p42mg341o" path="res://assets/objects/cheese_gate.png" id="2_s4fp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vghl1"]
size = Vector2(320, 512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsbop"]
size = Vector2(256, 512)

[node name="CheeseGate" type="Area2D"]
collision_mask = 2
script = ExtResource("1_bsbop")

[node name="AreaCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vghl1")

[node name="GateSprite" type="TextureRect" parent="."]
texture_repeat = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("2_s4fp2")
stretch_mode = 1

[node name="GateSolid" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="GateCollider" type="CollisionShape2D" parent="GateSolid"]
shape = SubResource("RectangleShape2D_bsbop")

[node name="NumberText" type="RichTextLabel" parent="."]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 128
text = "99
"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="IsOpen" parent="." instance=ExtResource("2_8ljp3")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
